@@ -16,7 +16,7 @@
 #include "caml/fail.h"
 #include "caml/mlvalues.h"
 
-int ensure_spacetime_dot_o_is_included = 42;
+int caml_ensure_spacetime_dot_o_is_included = 42;
 
 CAMLprim value caml_spacetime_only_works_for_native_code(value foo, ...)
 {
