@@ -38,6 +38,10 @@ Working version
   for native plugin files (i.e. .cmxs files)
   (Florian Angeletti, suggestion by Sébastien Hinderer)
 
+- MPR#1956, GPR#973: tools/check-symbol-names checks for globally
+  linked names not namespaced with caml_
+  (Stephen Dolan)
+
 ### Bug fixes
 
 - PR#7468: possible GC problem in caml_alloc_sprintf
